# scientific-intelligent-modelling

./: .gitignore  .gitmodules  AGENTS.md  README.md  environment.yml  examples.sh  manifest.json  pyproject.toml  test.py  使用教程.md  如何使用.sh  目标.md
.codex/: AGENTS.md  EXPERIMENT_HYPERPARAMETERS.md
.serena/: project.yml
bench_results/derived/: iaaccn49_llmsr_background_ablation_summary.csv
bench_results/stressstrain_200gen_six_experiments_20260425/: README.md  environment_and_best_formulas.json  environment_and_best_formulas.md  experiment_config.json  stressstrain_200gen_improvement_table.csv  stressstrain_200gen_improvement_table.md  summary.csv
bench_results/stressstrain_local_20260404_192600/: llm.config
check/: aggregate_formal200_results.py  aggregate_remote_llmsr_background_ablation.py  analyze_e1_rank_fidelity.py  analyze_submit_interpretability.py  analyze_submit_topk_ted.py  backfill_e1_drsr_results.py  backfill_e1_exact_result_metrics.py  backfill_e1_gplearn_results.py  build_benchmark_selection_dossier.py  build_e1_result_digest.py  check_drsr.py  check_dso.py  check_e2esr.py  check_gplearn.py  check_imcts.py  check_llmsr.py  check_pyoperon.py  check_pysr.py  check_qlattice.py  check_ragsr.py  check_tpsr.py  check_udsr.py  clean_master100.py  collect_e1_host_results.py  export_dev_core_formal_assets.py  export_formula_table_from_task_csv.py  generate_clean_core_reserve_split.py  generate_e1_formal_assets.py  generate_e1_repair_rerun_assets.py  generate_master100_dev_core_split.py  ingest_e1_identity_rerun.py  launch_e1_benchmark.py  launch_stressstrain_pysr_benchmark_remote.py  materialize_dev_core_split_datasets.py  merge_formal200_three_seed_results.py  plot_dev_core_selection_figures.py  plot_three_tool_rmse_aggregate.py  recover_timeout_batch_results.py  repair_dataset_metadata_fields.py  run_e1_waves_orchestrator.py  (+3 more)
dependencies/: pyoperon-0.5.0-cp310-cp310-manylinux_2_28_x86_64.whl
docs/: benchmark_metrics.md  benchmark_six_dimension_scheme.md  hyperparameter_search_design.md  pysr.md  tool_parameters_catalog.md  tool_usage_zh.md  udsr_full_reproduction_plan.md  unified_symbolic_metric_system_design.md  wrapper_design_gplearn.md  wrapper_design_pysr.md  使用教程.md  如何集成TPSR.md  如何集成dso.md  如何集成e2esr.md  如何集成llmsr.md  工具_drsr.md  工具_dso.md  工具_e2esr.md  工具_gplearn.md  工具_iMCTS.md  工具_llmsr.md  工具_pyoperon.md  工具_pysr.md  工具_qLattice.md  工具_tpsr.md
examples/BPG0/: formula.py  id_test.csv  metadata.yaml  ood_test.csv  train.csv  valid.csv
examples/BPG1/: formula.py  id_test.csv  metadata.yaml  ood_test.csv  train.csv  valid.csv
examples/BPG2/: formula.py  id_test.csv  metadata.yaml  ood_test.csv  train.csv  valid.csv
examples/oscillator1/: formula.py  id_test.csv  train.csv  (+3 more)
paper/: .gitignore  PAPER_IMPROVEMENT_LOG.md  figures_and_tables_plan.md  main.tex  main_zh.tex  main_zh.xdv  references.bib
scientific_intelligent_modelling/: __init__.py  cli.py  config_manager.py  cuda_conda_manager.py  enhanced_subprocess.py
scientific_intelligent_modelling.egg-info/: PKG-INFO  SOURCES.txt
scientific_intelligent_modelling/datasets/sim_datasets/: pyproject.toml
scientific_intelligent_modelling/datasets/sim_datasets/sim_datasets/: __init__.py  feynman.py  pmlb.py  utils.py
scripts/: create_spec_from_yaml.py
sim_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
source_markdown/: 00_说明.md  01_Symbolic_Regression_Benchmark.md  02_指标.md  03_自问自答.md  04_11月第一周.md  05_11月第三周.md  06_11月第四周.md  07_IDEA.md  08_如何进行实验.md  09_TODO.md  10_实验setting.md
tests/: config.json  generate_dataset.py  test11.py  test1_envs.py  test2_subprocess.py  test3_torch.py  test_benchmark_judges.py  test_benchmark_metrics.py  test_benchmark_progress_snapshots.py  test_benchmark_runner.py  test_clean_master100.py  test_cli_benchmark_mode.py  test_dataset_format_scripts.py  test_drsr_background.py  test_drsr_candidate_validation.py  test_drsr_complete.py  test_drsr_interface_alignment.py  test_drsr_llm_config.py  test_drsr_oscillator_background.py  test_drsr_predict_only.py  test_drsr_prompt_alignment.py  test_drsr_quick.py  test_drsr_run.py  test_drsr_smoke.py  test_dso.py  test_e2esr.py  test_e2esr_candidate_ordering.py  test_envs.py  test_equation_cleaning.py  test_evogp.py  test_feyn.py  test_gplearn.py  test_llm_provider_factory.py  test_llm_sr.py  test_llmsr.py  test_llmsr_existing_exp_dir.py  test_new_arch.py  test_popen.py  test_pyoperon.py  test_pysr.py  (+20 more)
thematic_notes/: 00_说明.md  01_项目定位与愿景.md  02_工程架构与实验基础设施.md  03_评测漏斗与核心数据集设计.md  04_实验设置_成本与指标.md  05_待解决问题与论文叙事.md  06_这几个月的思考总结.md
(+393 files in other folders)
