[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific_intelligent_modelling"
version = "0.2.0"
description = "A unified toolkit that integrates many external libraries"
readme = "README.md"
authors = [{ name = "kai li", email = "kai.li@ia.ac.cn" }]
license = { file = "LICENSE" }
keywords = ["modeling", "gplearn", "integration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10" # 修改为 3.10 以满足 pysr 要求

dependencies = [
    "pysr>=1.5.2",   
    "joblib>=1.0.0",  
    "pyoperon>=0.5.0",  
    "gplearn>=0.4.2",
]

[tool.setuptools]
packages = ["scientific_intelligent_modelling"]
package-dir = { scientific_intelligent_modelling = "scientific_intelligent_modelling" }
include-package-data = true
