[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-toolkit"
version = "1.0.0"
description = "A comprehensive scientific modeling framework that provides a unified access interface for various symbolic regression algorithms and scientific computing tools. This framework utilizes the conda environment management system to isolate dependencies of different tools, ensuring stable operation through a subprocess mechanism."
readme = "README.md"
authors = [
    {name = "Ziwen Zhang", email = "244824379@qq.com"},
    {name = "Kai Li", email = "kai.li@ia.ac.cn"}
]
license = "gpl-3.0"
keywords = ["modeling", "gplearn", "integration", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.6" # 基解释器版本无所谓

dependencies = ["numpy>=1.18.0", "networkx>=2.5", "pyyaml>=5.1"]


[tool.setuptools]
packages = ["scientific_intelligent_modelling"]
package-dir = { scientific_intelligent_modelling = "scientific_intelligent_modelling" }
include-package-data = true

[project.scripts]
sim-cli = "scientific_intelligent_modelling.cli:main"

[tool.mypy]
warn_return_any = true          #当函数返回Any类型时发出警告
warn_unused_configs = true      #提醒未使用的配置选项
disallow_untyped_defs = true    #要求所有函数都有类型注解
disallow_incomplete_defs = true #要求函数的所有参数和返回值都有类型注解

[tool.pytest.ini_options]
testpaths = ["tests"]      #指定测试文件所在的目录
python_files = "test_*.py" #指定哪些文件被视为测试文件（以"test_"开头的.py文件）
