[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_datasets"
version = "1.0.0"
description = "Scientific Intelligent Modelling Datasets"
readme = "README.md"
authors = [{ name = "kai li", email = "kai.li@ia.ac.cn" }]
license = { text = "MIT" }
keywords = ["modeling", "datasets", "scientific-modeling", "feynman", "pmlb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.6" # 基解释器版本无所谓

dependencies = [
    "numpy>=1.18.0",
    "pandas>=1.0.0",
    "requests>=2.25.0",
    "tqdm>=4.50.0",
]

[tool.setuptools]
packages = ["sim_datasets"]
include-package-data = true

[tool.mypy]
warn_return_any = true          #当函数返回Any类型时发出警告
warn_unused_configs = true      #提醒未使用的配置选项
disallow_untyped_defs = true    #要求所有函数都有类型注解
disallow_incomplete_defs = true #要求函数的所有参数和返回值都有类型注解

[tool.pytest.ini_options]
testpaths = ["tests"]      #指定测试文件所在的目录
python_files = "test_*.py" #指定哪些文件被视为测试文件（以"test_"开头的.py文件）
